# ips

./: .cirrus.yml  .gitignore  .gitmodules  .replit  CLAUDE.md  Cargo.toml  IMPLEMENTATION_STATUS.md  Jenkinsfile  Makefile  README.md  TESTING.md  Vagrantfile  missing.p5m  pkg6depotd.kdl  ports.spec  rebuild_test_repo.sh  run_local_import_test.sh  run_openindiana_image_import.sh  run_sample_install.sh  setup_test_env.sh  test_file_structure.rs  test_repo_operations.sh
.cargo/: config.toml
.github/: README.md
.github/workflows/: release.yml  rust-clippy.yml  rust.yml
.junie/: guidelines.md
.solstice/: job.sh  setup-illumos.sh  setup-linux.sh  workflow.kdl
crates/pkg6/: Cargo.toml
crates/pkg6/src/: main.rs
doc/: Obsoletion Index.txt  obsoleted_packages.md  pub_p5i_implementation.md
doc/ai/: 2025-11-12-redb-search-index.md
doc/forge_docs/: ips_integration.md
doc/pkg5_docs/: Makefile  bhyve.md  depot.txt  guide-main.rst  kvm.md  multi-platform.rst  multi-platform.txt  search.txt
doc/pkg5_docs/dev-guide/: Makefile  appendix-b.txt  chpt1.txt  chpt13.txt  chpt14.txt  chpt3.txt  chpt4.txt  chpt6.txt  chpt7.txt  chpt8.txt  chpt9.txt  developer-guide.txt  macros.txt
doc/rust_docs/: error_handling.md  pkgdepend-dependency-resolution.txt
docs/ai/: 2025-11-12-redb-search-index-postcard.md  2025-11-12-redb-search-index-simplified.md
libips/: Cargo.toml
libips/src/: api.rs  fmri.rs  lib.rs  publisher.rs  publisher_tests.rs  recv.rs  test_json_manifest.rs  transformer.rs
libips/src/actions/: executors.rs  manifest.pest  mod.rs
libips/src/depend/: mod.rs
libips/src/digest/: mod.rs
libips/src/image/: action_plan.rs  catalog.rs  installed.rs  installed_tests.rs  mod.rs  properties.rs  tests.rs
libips/src/payload/: mod.rs
libips/src/repository/: catalog.rs  catalog_writer.rs  file_backend.rs  mod.rs  obsoleted.rs  progress.rs  rest_backend.rs  shard_sync.rs  sqlite_catalog.rs  tests.rs
libips/src/solver/: advice.rs  mod.rs
libips/tests/: e2e_openindiana.rs  test_manifest_parsing.rs  test_user_services.rs
pkg6/: Cargo.toml
pkg6/src/: error.rs  main.rs
pkg6depotd/: Cargo.toml  README.md
pkg6depotd/src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs  repo.rs
pkg6depotd/src/daemon/: mod.rs
pkg6depotd/src/http/: admin.rs  mod.rs  routes.rs  server.rs
pkg6depotd/src/http/handlers/: catalog.rs  file.rs  info.rs  manifest.rs  mod.rs  publisher.rs  search.rs  shard.rs  versions.rs
pkg6depotd/src/http/middleware/: mod.rs
pkg6depotd/src/telemetry/: mod.rs
pkg6depotd/tests/: integration_tests.rs
pkg6dev/: Cargo.toml  README.md
pkg6dev/src/: error.rs  main.rs
pkg6recv/: Cargo.toml
pkg6recv/src/: main.rs
pkg6repo/: Cargo.toml  README.md
pkg6repo/src/: e2e_tests.rs  error.rs  main.rs  pkg5_import.rs  tests.rs
pkgtree/: Cargo.toml
pkgtree/src/: main.rs
ports/: Cargo.toml
ports/src/: main.rs  sources.rs  workspace.rs
sample_data/components/developer/golang-116/: Makefile
sample_data/components/developer/golang-116/manifests/: sample-manifest.p5m
sample_data/components/print/cups/: Makefile
sample_data/pkgs/cups/: Makefile  cups-libs.p5m  cups.p5m
sample_data/pkgs/cups/manifests/: sample-manifest.p5m
sample_data/pkgs/golang-116/: Makefile
specfile/: Cargo.toml
specfile/src/: lib.rs  macro.pest  macros.rs  specfile.pest
specfile/src/test_data/: simple.spec
src/: lib.rs
src/actions/: mod.rs
src/digest/: mod.rs
src/payload/: mod.rs
testing/manual/: README.md  fetch_repo.sh  run_depotd.sh
userland/: Cargo.toml  LICENSE  README.md
userland/src/: component.rs  lib.rs  makefile.pest  repology.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
