#  This Source Code Form is subject to the terms of
#  the Mozilla Public License, v. 2.0. If a copy of the
#  MPL was not distributed with this file, You can
#  obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "libips"
version = "0.0.1-placeholder"
authors = ["Till Wegmueller <till.wegmueller@openflowlabs.com>"]
edition = "2018"
license-file = "LICENSE"
license = "Mozilla Public License, v. 2.0"
description = "The core library for the rust version of the Image Packaging System. Includes Python bindings."
repository = "https://github.com/OpenFlowLabs/libips"
readme = "README.md"
keywords = ["packaging", "illumos"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.7"
failure = "0.1.8"