[workspace]
# Order is important as this is the order the crates will be released.
members = [
  "libips",
  "pkg6depotd",
  "pkg6repo",
  "userland",
  "specfile",
  "ports",
  "pkg6",
  "pkgtree",
  "xtask",
]
resolver = "2"

[workspace.package]
publish = false
description = "The Image Packaging System (IPS) for illumos"
version = "0.5.2"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/OpenFlowLabs/ips"
readme = "README.md"
keywords = ["packaging", "illumos"]
authors = ["Till Wegmueller <toasterson@gmail.com>"]

[workspace.metadata.release]
publish = false
push = false
tag = true
pre-release-commit-message = "chore: Release {{version}}"
tag-message = "chore: Release {{version}}"
consolidate-commits = true
shared-version = true
