#  This Source Code Form is subject to the terms of
#  the Mozilla Public License, v. 2.0. If a copy of the
#  MPL was not distributed with this file, You can
#  obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "libips"
description = "The core library for the rust version of the Image Packaging System. Includes Python bindings."
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
thiserror = "1.0.50"
miette = "7.6.0"
tracing = "0.1.37"
maplit = "0.1.6"
object = "0.23.0"
sha2 = "0.9.3"
sha3 = "0.9.1"
pest = "2.1.3"
pest_derive = "2.1.0"
strum = { version = "0.24.1", features = ["derive"] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
serde_cbor = "0.11.2"
flate2 = "1.0.28"
lz4 = "1.24.0"
semver = { version = "1.0.20", features = ["serde"] }
diff-struct = "0.5.3"
chrono = "0.4.41"
tempfile = "3.20.0"
walkdir = "2.4.0"
redb = "1.5.0"
bincode = "1.3.3"

[features]
default = ["redb-index"]
redb-index = []  # Enable redb-based index for obsoleted packages
