#  This Source Code Form is subject to the terms of
#  the Mozilla Public License, v. 2.0. If a copy of the
#  MPL was not distributed with this file, You can
#  obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "libips"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
thiserror = "2"
miette = "7.6.0"
tracing = "0.1.37"
maplit = "1"
object = "0.37"
goblin = "0.8"
sha2 = "0.10"
# For SHA-1 signatures required by legacy catalog format
sha1 = "0.10"
sha3 = "0.10"
pest = "2.1.3"
pest_derive = "2.1.0"
strum = { version = "0.27", features = ["derive"] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
serde_cbor = "0.11.2"
flate2 = "1.0.28"
lz4 = "1.24.0"
semver = { version = "1.0.20", features = ["serde"] }
diff-struct = "0.5.3"
chrono = "0.4.41"
tempfile = "3.20.0"
walkdir = "2.4.0"
redb = { version = "3" }
bincode = { version = "2", features = ["serde"] }
rust-ini = "0.21"
reqwest = { version = "0.12", features = ["blocking", "json"] }
resolvo = "0.10"

[features]
default = ["redb-index"]
redb-index = []  # Enable redb-based index for obsoleted packages
