[package]
name = "pkg6dev"
version = "0.1.1"
authors = ["Till Wegmueller <till.wegmueller@openflowlabs.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Helper tool for IPS package development"
repository = "https://github.com/OpenFlowLabs/ips"
readme = "README.md"
keywords = ["packaging", "illumos"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libips = {path = "../libips", version = "0.1.1"}
userland = {path = "../userland", version = "0.1.1"}
anyhow = "1.0.59"
clap = {version = "3.2.16", features = [ "derive" ] }