[package]
name = "pkg6dev"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Helper tool for IPS package development"
repository.workspace = true
readme.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libips = {path = "../libips", version = "*"}
userland = {path = "../userland", version = "*"}
clap = {version = "4", features = [ "derive" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
anyhow = "1.0"