[package]
name = "pkg6repo"
version = "0.0.1-placeholder"
authors = ["Till Wegmueller <till.wegmueller@openflowlabs.com>"]
edition = "2018"
license-file = "LICENSE"
description = "The repository management utility for IPS written in rust"
repository = "https://github.com/OpenFlowLabs/pkg6dev"
readme = "README.md"
keywords = ["packaging", "illumos"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
libips = { path = "../libips" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"
