[package]
name = "pkg6repo"
version = "0.0.1-placeholder"
authors = ["Till Wegmueller <till.wegmueller@openflowlabs.com>"]
edition = "2018"
license-file = "LICENSE"
description = "The repository management utility for IPS written in rust"
repository = "https://github.com/OpenFlowLabs/pkg6dev"
readme = "README.md"
keywords = ["packaging", "illumos"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
libips = { path = "../libips" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[test]]
name = "e2e_tests"
path = "src/e2e_tests.rs"
