[package]
name = "pkg6repo"
description = "The repository management utility for IPS written in rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libips = { path = "../libips",  version = "*"}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.8"
flate2 = "1.0"

[[test]]
name = "e2e_tests"
path = "src/e2e_tests.rs"
