[package]
name = "pkgtree"
description.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.5.9", features = ["derive", "env"] }
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "1.0.50"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libips = { path = "../libips" }
