[package]
name = "specfile"
version = "0.1.0"
authors = ["Till Wegmueller <toasterson@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.3.0"
pest_derive = "2.3.0"
anyhow = "1.0.59"
thiserror = "*"