[package]
name = "specfile"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.3.0"
pest_derive = "2.3.0"
anyhow = "1.0.59"
thiserror = "*"
