[package]
name = "userland"
description = "Helper tool for IPS package development"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
thiserror = "1.0.30"
pest_derive = "2.1.0"
maplit = "1.0.2"
pest = "2.1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
semver = "1.0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
lazy_static = "1"
url = { version = "2.2.2", features = ["serde"] }

[dependencies.openssl]
version = "*"
features = ["vendored"]
