[package]
name = "userland"
description = "Helper tool for IPS package development"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "2"
pest_derive = "2"
pest = "2"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
regex = "1"
lazy_static = "1"
url = { version = "2", features = ["serde"] }
