[package]
name = "pkg6"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
libips = { version = "*", path = "../../libips" }
diff-struct = "0.5.3"
serde = { version = "1.0.207", features = ["derive"] }
